Fixed some typos in markdown sections

--- a/RRH_Supplement_3State_BMM_CVAE.ipynb
+++ b/RRH_Supplement_3State_BMM_CVAE.ipynb
@@ -30,6 +30,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YkNJ-cDeW40P",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Load Packages"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "TAC3Qo-rYXq7",
@@ -111,7 +121,7 @@
       },
       "source": [
         "---\n",
-        "## Supplemental Code for Section 2.2.1.: _Limitations of Existing Non-Categorical Heterogeneity Indices_"
+        "## Supplemental Code for Section 2.2.4: _Limitations of Existing Non-Categorical Heterogeneity Indices_"
       ]
     },
     {
@@ -659,10 +669,10 @@
         "\n",
         "##### Marginal Survival \n",
         "\n",
-        "Let $I_{x}(a, b)$ be the regularized incomplete beta function.\n",
+        "Let $I_{x}^1(a, b)$ be the generalized regularized incomplete beta function.\n",
         "\n",
         "$$\n",
-        "\\psi_{a,b,c}(x) = (1 - c) I_{x}(a, b) + c I_{x}(b, a),\n",
+        "\\psi_{a,b,c}(x) = (1 - c) I_{x}^1(a, b) + c I_{x}^1(b, a),\n",
         "$$\n",
         "\n",
         "##### Posterior \n",
@@ -680,7 +690,7 @@
         "    \\left(1-c\\right)^\\frac{1}{2(a-b)}\n",
         "    c^{-\\frac{1}{2(a-b)}} + 1\n",
         "    \\right]^{-1} & a-b \\neq 0 \\\\\n",
-        "     0 & \\left((a > b) \\wedge (c < \\frac{1}{2})\\right) \\vee \\left((b > a)  \\wedge (c > \\frac{1}{2})\\right) \\\\\n",
+        "     0 &  (a=b) \\wedge (c > \\frac{1}{2}) \\\\\n",
         "     1 & \\text{Otherwise}\n",
         "    \\end{array}\\right.\n",
         "$$"
@@ -921,9 +931,9 @@
         "where \n",
         "\n",
         "\\begin{equation}\n",
-        "d(x,y) = - \\langle y \\rangle\n",
+        "d(x,y) =  \\langle x \\rangle - \\langle y \\rangle\n",
         "    +  \\eta\n",
-        "    \\left(\\Phi_a - \\alpha_1 \\Phi_b \\right) \\langle x \\rangle,\n",
+        "    \\left(\\Phi_a - \\alpha_1 \\Phi_b \\right),\n",
         "\\end{equation}\n",
         "\n",
         "\\noindent where\n",
@@ -1364,7 +1374,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Define the Autoencoder\n",
+        "### Define the Autoencoder\n",
         "\n",
         "For our purposes, it will suffice to use a pre-trained model."
       ]
@@ -1486,7 +1496,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Rényi Heterogeneity Computation for Mixture of Gaussians\n",
+        "### Rényi Heterogeneity Computation for Mixture of Gaussians\n",
         "\n",
         "Recall that the Rényi heterogeneity for a multivariate Gaussian is defined as \n",
         "\n",
@@ -1875,7 +1885,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Does $\\beta$-heterogeneity in this context really capture heterogeneity?\n",
+        "### Does $\\beta$-heterogeneity in this context really capture heterogeneity?\n",
         "\n",
         "The purpose of this aspect of our experiment is to verify (visually) that data sampled from spots with high $\\beta$-heterogeneity will be more diverse in their contents. \n",
         "\n",
